[package]
name = "ygodeckbuilderproelite"
version = "0.1.0"
edition = "2021"

[features]
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
eframe = { version = "0.19.0" }
egui_extras = { version = "0.19.0", features = ["image"] }
poll-promise = "0.1.0"
rayon = "1.5.3"
reqwest = {version = "0.11.12", features = ["json", "blocking"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.87"
wasm-bindgen-futures = "0.4.33"
image = { version = "0.24", features = ["jpeg", "png"] }
wildmatch = "2.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.21.2", features = ["full"]}
dirs = "4.0.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
web-sys = "0.3.59"
